--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
  
       - name: Terraform Init
         run: terraform init
-      - name: Terraform validate
-        run: terraform validate
+      - name: Terraform apply
+        run: terraform apply
  
